--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1185,3 +1185,112 @@ As the $\delta x^r$ are arbitrary, we must have for $\delta L =0$
 This is the same equation as $\mathbf{5.532}$ which describe the motion of a system with a conservative force. 
 $$\blacklozenge$$
 \newpage
+
+\section{p188 - Exercise 10}
+\begin{tcolorbox}
+Using the definition $\mathbf{5.5335}$ for $I_{rs}$, prove that if $X_r$ is any non-zero vector, then $I_{rs}X_rX_s \geq 0$, and that the equality occurs only if all particles of the system are distributed on a single line.
+\end{tcolorbox}
+By  $\mathbf{5.335}$
+\begin{align}
+I_{rs}&= \delta_{rs}\sum m z_qz_q - \sum m z_r z_s
+\end{align}
+Multiplying by $X_rX_s$:
+
+\begin{align}
+I_{rs}X_rX_s&= \underbrace{X_r X_s \delta_{rs}}_{=X_rX_r}\sum m z_qz_q - \sum m \underbrace{z_rX_r}_{=\left|z\right|_{(m)}\left|X\right|\cos{\theta}_m }\underbrace{ z_sX_s}_{=\left|z\right|_{(m)}\left|X\right|\cos{\theta}_m }
+\end{align}
+with $\theta_m$ the angle between the vector $X_r$ and the position vector $z_m$ of a particle.
+\begin{align}
+I_{rs}X_rX_s &=\left|X\right|^2\sum m \left|z\right|_{(m)}^2 - \left|X\right|^2\sum m\left|z\right|_{(m)}^2\cos^2{\theta}_m \\
+&=\left|X\right|^2\sum m \left|z\right|_{(m)}^2\left(1 - \cos^2{\theta}_m \right)
+\end{align}
+As we have $\left(1 - \cos^2{\theta}_m \right) \in [0,1]$ it is clear that $I_{rs}X_rX_s  \geq0$ and that it only will be zero when $\theta_m = 0 \quad \forall m$ which means that all position vectors are collinear wit $X_r$ and are on a line.
+$$\blacklozenge$$
+\newpage
+
+\section{p188 - Exercise 11}
+\begin{tcolorbox}
+Let $Oz_1z_2z_3$ and $O^{'}z^{'}_1z^{'}_2z^{'}_3$ be two sets of Cartesian axes parallel to one another. Consider a mass distribution and let $I_{rs}, I^{'}_{rs}$be its moment of inertia tensors calculated for these two axes in accordance with $\mathbf{5.335}$. Writing $ I^{'}_{rs}=I_{rs}+K_{rs}$, evaluate $K_{rs}$.
+\end{tcolorbox}
+By  $\mathbf{5.335}$
+\begin{align}
+I_{rs}&= \delta_{rs}\sum m z_qz_q - \sum m z_r z_s
+\end{align}
+As the axes of both coordinate systems are parallel, we can write
+\begin{align}
+z^{'}_q = z_q + b_q
+\end{align}
+which gives for (1):
+\begin{align}
+I_{rs}^{'}&= \delta_{rs}\sum m \left(z_q + b_q\right)\left(z_q + b_q\right) - \sum m \left(z_r + b_r\right) \left(z_s + b_s\right)\\
+&=\left\{\begin{array}{l}\delta_{rs}\sum m z_q z_q  - \sum m z_r z_s\\ +\delta_{rs}\sum m b_qz_q - \sum m  b_rz_s \\+\delta_{rs}\sum m b_qz_q - \sum m  b_sz_r \\+\delta_{rs}\sum m  b_qb_q- \sum mb_rb_s\end{array}\right.\\
+&=\left\{\begin{array}{l}I_{rs}\\ +\delta_{rs}\sum m b_qz_q - \sum m  b_rz_s \\+\delta_{rs}\sum m b_qz_q - \sum m  b_sz_r \\+\delta_{rs}\sum m  b_qb_q- \sum mb_rb_s\end{array}\right.\\
+\end{align}
+The last term $\delta_{rs}\sum m  b_qb_q- \sum mb_rb_s$ can be interpreted as a  moment of inertia tensor for a single  virtual mass $M=\sum m$ situated at the point $b_q$ seen from the axes $Oz_1z_2z_3$. Let's denote it with $\tilde{I}_{rs}= \sum m \left(\delta_{rs} b_qb_q- b_rb_s\right)$.\\
+The other two terms can also be seen as a rigid body of particles distributed in a plane perpendicular to one of the axis i.e. all particles are transported perpendicularity to a plane. We note that $\delta_{rs}\sum m b_qz_q - \sum m  b_rz_s = \delta_{rs}\sum m b_qz_q - \sum m  b_sz_r$. This follows immediately from the symmetric character of $I_{rs}^{'},I_{rs}^{},\tilde{I}_{rs}$. \\ Denoting $\overline{I}_{rs}= \delta_{rs}\sum m b_qz_q - \sum m  b_rz_s +\delta_{rs}\sum m b_qz_q - \sum m  b_sz_r$ giving
+$$ K_{rs} = I_{rs}+\overline{I}_{rs}+\tilde{I}_{rs}$$
+$$\blacklozenge$$
+
+
+\section{p189 - Exercise 12}
+\begin{tcolorbox}
+A rigid body is turning about a fixed point. Referred to right-handed axes $Oz_1z_2z_3$, its angular velocity tensor has components
+$$\omega_{23}=1, \quad \omega_{31}=2, \quad\omega_{12}=3$$
+If we refer the same motion to the axis  $O^{'}z^{'}_1z^{'}_2z^{'}_3$ , such that the axis $O^{'}z^{'}_1$ is $O^{}z^{'}_1$ reversed, while $z_2z_3$ coincide with $O^{'}z^{'}_2z^{'}_3$, what are the $\omega^{'}_{rs}$ and $\omega^{'}_{rs}$?
+\end{tcolorbox}
+
+We use the following identities
+\begin{align}
+\left\{\begin{array}{ll}
+ \mathbf{5.312}& \omega_{rm}=-\omega_{mr}\\
+\mathbf{5.316}& \omega_{rs}=\epsilon_{rsn}\omega_{n}\\
+\mathbf{5.317}& \omega_{1}= \omega_{23}\quad\omega_{2}= \omega_{31}\quad\omega_{3}= \omega_{12}
+\end{array}\right.
+\end{align}
+The angular velocity tensor is
+\begin{align}
+\Omega =\left( \begin{matrix}
+0&3&-2\\
+-3&0&1\\
+2&-1&0
+\end{matrix}\right)
+\end{align}
+giving by $\mathbf{5.317}$
+\begin{align}
+ \omega_{1}= \omega_{23}\quad\omega_{2}= \omega_{31}\quad\omega_{3}= \omega_{12}
+ \end{align}
+ From pure geometrical consideration we can conclude that
+ \begin{align}
+ \omega_{1}^{'}= -\omega_{1}^{}\quad\omega_{2}^{'}= \omega_{2}^{}\quad\omega_{3}^{'}= \omega_{3}^{}
+ \end{align}
+ 
+\begin{figure}[H]
+    \centering
+    \subfloat[]{\input{C:/MathLatex/images/fig_p188_Ex12_a.tex}}
+\caption{Angular velocity vectors in mirrored axis}
+\label{fig:fig_p169_a}
+\end{figure}
+Indeed, the $\omega_i$ can be considered as vectors, objects independent from the chosen coordinate system. Reversing the direction of the first axis, will for the observer looking along the positive direction, look as if the $\omega_1$ is reversed.
+We now use $\omega_{rs}=\epsilon_{rsn}\omega_{n}$ but here we have to be careful with $\epsilon_{rsn}$ when using the equation in the transformed coordinate system.
+
+Looking at $\mathbf{4.312} \quad \epsilon_{stu}^{'} = \epsilon_{mnr}^{} \frac{\partial z_m}{\partial z_s^{'}}\frac{\partial z_n}{\partial z_t^{'}}\frac{\partial z_r^{}}{\partial z_u^{'}}$ and noting that $\frac{\partial z_1}{\partial z_1^{'}}=-1$ and $1$ or $0$ for the others, we have
+$\epsilon_{stu}^{'} = -\epsilon_{mnr}^{}$.
+Now with $\mathbf{5.316}$ we get
+\begin{align}
+ \omega_{rs}^{'}=-\epsilon_{rsn}\omega_{n}^{'}
+ \end{align}
+ giving
+ 
+ \begin{align}
+ \omega_{12}^{'}= -\omega_{12}^{}\quad\omega_{13}^{'}= -\omega_{13}^{}\quad\omega_{23}^{'}= \omega_{23}^{}
+ \end{align}
+ Giving
+ \begin{align}
+\Omega^{'} =\left( \begin{matrix}
+0&-3&2\\
+3&0&1\\
+-2&-1&0
+\end{matrix}\right)
+\end{align}
+ 
+$$\blacklozenge$$
